Revised short description on the dise.

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Daniel Feitosa"
   avatar           : "profile.jpg"
-  bio              : "Assistant Professor at Campus Fryslân\nGuest Researcher at SEARCH\nUniversity of Groningen"
+  bio              : "Assistant Professor at the University of Groningen"
   location         : "Groningen, the Netherlands"
   employer         : "University of Groningen (UG)"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
