Add link to mastodon account.

--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  mastodon         : "https://mastodon.acm.org/@danielfeitosa"
 
 
 # Reading Files
